Repair bid && photopath (#39)
* integration tests with secured bypass && bid dto

* refactoring && cleaning

* cleaning

* replace mocked email with constant

* fix photos path

---------

Co-authored-by: Maciej Iwan <“64867638+MaciejIwan@users.noreply.github.com”>